test/first-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: "nginx"
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80




# # https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: main-ingress
#   namespace: default
# spec:
#   rules:
#   - host: apps.k8s
#     http:
#       paths:
#       - path: /mongo-admin
#         pathType: Prefix
#         backend:
#           service:
#             name: mongo-express-service
#             port:
#               number: 8081
#       - path: /dashboard
#         pathType: Prefix
#         backend:
#           service:
#             name: kubernetes-dashboard
#             port:
#               number: 80
#             namespace: kubernetes-dashboard
